--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,19 @@
   "name": "client",
   "version": "1.0.0",
   "description": "Client for NodeJS exam project",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "nodemon": "^2.0.22",
+    "showdown": "^2.1.0",
+    "socket.io": "^4.6.1"
+  }
 }
