--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
     "showdown": "^2.1.0",
     "socket.io": "^4.6.1"
