--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "showdown": "^2.1.0",
     "socket.io": "^4.6.1"
